--- a/obsidian_db/IT/Web/Css/Псевдокласс.md
+++ b/obsidian_db/IT/Web/Css/Псевдокласс.md
@@ -263,7 +263,7 @@ https://nth-child.belter.io/
 ```css
     `input:disabled {   opacity: 0.5; }`
 ``` 
-    
+    ![[Pasted image 20240125100254.png]]
 ## :enabled
     
     - Применяется к включенным элементам формы.
@@ -342,9 +342,8 @@ https://nth-child.belter.io/
     `input::placeholder {   color: #999; }`
 ``` 
     
-38. **`:in-range` и `:out-of-range`:**
-    
-## :in-range
+## **`:in-range` и `:out-of-range`:**
+    :in-range
 - применяется к элементам формы с допустимыми значениями, а `:out-of-range` — к элементам с недопустимыми значениями.
     
 ```css
