--- a/obsidian_db/IT/Web/Css/Псевдокласс.md
+++ b/obsidian_db/IT/Web/Css/Псевдокласс.md
@@ -13,6 +13,8 @@
 ``` 
     
 >[!info] на все эл интерактивные
+
+![[Pasted image 20240203140818.png]] не будит ховера на тачь
 ##  :active
     
 - Применяется, когда элемент активен, например, при нажатии на кнопку мыши.
