--- a/obsidian_db/IT/JS/article/События на мобильных устройствах.md
+++ b/obsidian_db/IT/JS/article/События на мобильных устройствах.md
@@ -111,5 +111,5 @@ myElement.addEventListener("touchmove", function(event) {
     })
 ```
 
-## Небольшо скрипт котороый отслеживает все события 
+## Небольшой скрипт котороый отслеживает все события 
 https://hammerjs.github.io/
